This file contains a list of new features and capabilities by TMDA
version.  These blurbs are what are usually included in release
announcements under "What's new?".  Make sure to read the UPGRADE
file in this directory as well.

======================================================================

TMDA 1.1.8 "Imperial" --

* TMDA's internal copy of the Python email package has been upgraded
  to v4.0.1.

* The bin/tmda-* programs have been revamped to use Python's new
  'optparse' library.

======================================================================

TMDA 1.1.7 "Hazelburn" --

* TMDA can now optionally store unconfirmed messages in a "Maildir"
  rather than in TMDA's custom pending queue format.  This allows you
  to use any mail reading program that supports Maildir to browse or
  search your pending queue, rather than the 'tmda-pending' and
  'tmda-cgi' programs, though the latter will still work.

  For more infomation on how to enable and use this feature, please
  see http://wiki.tmda.net/TmdaPendingAsMaildir

* tmda-filter has a new command-line option, '-e/--environ' which you
  can use to add a VAR=value pair to the environment.  One example use
  of this is to allow TMDA to be setup as a Postfix transport.
  Contributed by Bernard Johnson.

======================================================================

TMDA 1.1.6 "Glen Albyn" --

* tmda-filter will defer incoming deliveries if the sticky bit is set
  on your home directory (as determined by the $HOME variable).  This
  allows you to safely edit the contents of ~/.tmda/ on a live system
  if you need to.  Set the sticky bit with:

  % chmod +t $HOME

  And make sure to remove it when you are done (chmod -t $HOME).  This
  idea comes from qmail-local.  See "SAFE QMAIL EDITING" at
  http://www.qmail.org/man/man5/dot-qmail.html

* tmda-ofmipd now has "one-session" mode through the '--one-session'
  command-line option, courtesy of Stephen Warren.  This allows you to