@@ -469,6 +469,7 @@ def do_default_action(action, logname, template=None):
         bouncegen('request')
 
 
+
 def release_pending(timestamp, pid, msg):
     """Release a confirmed message from the pending queue."""
     # Remove Return-Path: to avoid duplicates.
@@ -579,6 +580,40 @@ def verify_confirm_cookie(confirm_cookie, confirm_action):
             mta.deliver(msgin)
 
 
+def dispose_expired_dated(cookie_date):
+    """Dispose of an expired dated address based on ACTION_EXPIRED_DATED
+    dictionary settings"""
+    templist = []
+    havedefault = False
+    # go through all of the times, and convert them into seconds
+    # default becomes "0", saving the symbolic name logging
+    for k,v in Defaults.ACTION_EXPIRED_DATED.iteritems():
+        if k <> 'default':
+	    templist.append((Util.seconds(k),v,k))
+        else:
+	    # Default is False.  The number represents the number of
+	    # seconds that the address has been expired.  A negative
+	    # number would imply a non-expired address, so zero will
+	    # suffice as a default.
+	    templist.append((0,v,k))
+	    havedefault = True
+    # If no default specfied, assume "confirm"
+    if havedefault is False:
+	templist.append((0,'confirm','default'))
+    templist.sort()
+    templist.reverse()
+    # calculate how long ago the address expired
+    overdue = int('%d' % time.time()) - int(cookie_date)
+    # Figure out which action should be used.  Since the list is reverse
+    # sorted, the first time that overdue is > then the time in the list
+    # means that we've found the action to use
+    for i in templist:
+	if overdue > i[0]:
+	    logmsg = "ACTION_EXPIRED_DATED/%s (%s)" % \
+		(i[2], Util.make_date(int(cookie_date)))
+	    do_default_action(i[1].lower(), logmsg, 'bounce_expired_dated.txt')
+
+
 def verify_dated_cookie(dated_cookie):
     """Verify a dated cookie."""
     # Save some time if the cookie is bogus.
@@ -600,10 +635,18 @@ def verify_dated_cookie(dated_cookie):
                   Util.make_date(int(cookie_date)))
             mta.deliver(msgin)
         else:
-            logmsg = "action_expired_dated (%s)" % \
-                     Util.make_date(int(cookie_date))
-            do_default_action(Defaults.ACTION_EXPIRED_DATED.lower(),
-                              logmsg, 'bounce_expired_dated.txt')
+            logmsg = "ACTION_EXPIRED_DATED (%s)" % \
+		Util.make_date(int(cookie_date))
+	    if type(Defaults.ACTION_EXPIRED_DATED) is str:
+                do_default_action(Defaults.ACTION_EXPIRED_DATED.lower(),
+				  logmsg, 'bounce_expired_dated.txt')
+	    elif type(Defaults.ACTION_EXPIRED_DATED) is not dict:
+		errmsg = 'ACTION_EXPIRED_DATED is wrong type (%s). ' % \
+		    type(Defaults.ACTION_EXPIRED_DATED)
+	        raise TypeError, errmsg + \
+		    'Must be string or dictionary'
+	    else:
+		dispose_expired_dated(cookie_date)
 
 
 def verify_sender_cookie(sender_address,sender_cookie):
